<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="10dp">

	<com.blackcat.currencyedittext.CurrencyEditText
		android:id="@+id/valorInvestimento"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginRight="10dp"
		android:ems="10"
		android:gravity="center"
		android:hint="@string/simbolo_dinheiro"
		android:inputType="numberDecimal"
		android:textSize="40sp"
		app:layout_constraintBottom_toTopOf="@+id/textView3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView" />

	<com.santalu.maskedittext.MaskEditText
		android:id="@+id/dataVencimento"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginRight="10dp"
		android:ems="10"
		android:gravity="center"
		android:hint="@string/hint_data"
		app:met_mask="##/##/####"
		android:inputType="date"
		android:textSize="40sp"
		app:layout_constraintBottom_toTopOf="@+id/textView4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView3" />

	<EditText
		android:id="@+id/percentualCDI"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="10dp"
		android:layout_marginRight="10dp"
		android:ems="10"
		android:gravity="center"
		android:hint="@string/hint_percentual"
		android:inputType="number"
		android:textSize="40sp"
		app:layout_constraintBottom_toTopOf="@+id/btn_simular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginRight="10dp"
		android:gravity="center"
		android:text="@string/quanto_gostaria_de_aplicar"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/valorInvestimento"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginRight="10dp"
		android:gravity="center"
		android:text="@string/qual_percentual_cdi"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/percentualCDI"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dataVencimento" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginRight="10dp"
		android:gravity="center"
		android:text="@string/qual_vencimento"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/dataVencimento"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/valorInvestimento" />

	<include
		android:id="@+id/btn_simular"
		layout="@layout/btn_simular"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>